add WAR packaging and health endpoint